# CartPole-BipedalWalkerDQN

./: .gitignore  EVALUATION.md  PARAMETER.md  README.md  pyproject.toml
configs/: bipedalwalker.json  cartpole.json
docs/documentation/: .gitignore  main.tex
docs/documentation/sty/: checklist.tex  style.sty
docs/documentation/tex/: 0-frontmatter.tex  1-Introduction.tex  2-Theory.tex  3-Implementation.tex  4-TrainingResults.tex  5-Appendix.tex
docs/presentation/: .gitignore  .latexmkrc  main.tex
docs/presentation/sty/: style.sty
results/BipedalWalker-v3/: README.md
results/BipedalWalker-v3/eval/: bw_01_baseline_large_300_eval50.csv  bw_02_stable_low_lr_large_300_eval50.csv  bw_03_more_exploration_large_300_eval50.csv  bw_04_medium_network_300_eval50.csv  bw_05_big_replay_batch_300_eval50.csv  bw_06_boltzmann_large_300_eval50.csv  (+10 more)
results/CartPole-v1/: README.md
src/: batch_training.py  plot_results.py  test_model.py  training.py
src/dqn/: README.md  __init__.py  config.py  dqn_agent.py  learner.py  logic.py  memory.py  reporting.py
src/env/: README.md  __init__.py  bipedal_wrapper.py
test_batch/: test2.json
test_configs/bipedal/: bw_arch_large.json  bw_arch_small.json  bw_policy_boltzmann.json
test_configs/cartpole/: cp_arch_large.json  cp_arch_medium.json  cp_arch_small.json  cp_explore_aggressive.json  cp_explore_conservative.json  cp_gamma_low.json  cp_lr_high.json  cp_lr_low.json  cp_policy_boltzmann.json  cp_policy_epsilon_greedy.json  cp_policy_greedy.json
tests/: test_memory.py  test_model_runner.py  test_smoke.py
(+35 files in other folders)
